# ztrace

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
docs/: xctrace-schema.md
src/ztrace/: __init__.py  cli.py  exporter.py  parser.py  summarizer.py
test/fixtures/: hotspot.swift
